--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {
+    "path": "^0.12.7",
+    "nodemon": "^1.19.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "nodemon": "^1.19.1"
+    "eslint-plugin-react": "^7.14.3"
+  },
+  "devDependencies": {
   }
 }
